--- a/src/components/faq/Faq.module.scss
+++ b/src/components/faq/Faq.module.scss
@@ -15,6 +15,7 @@
         text-align: left;
         font-size: 1rem;
         position: relative;
+        color: $black;
 
         &:hover {
             color: #3084aa;
