--- a/src/components/subscribe/Subscribe.module.scss
+++ b/src/components/subscribe/Subscribe.module.scss
@@ -1,8 +1,8 @@
 
 @use '../../styles/variables' as *;
+
 .subscribe {
     position: relative;
-    //background-color: $gray;
     padding-bottom: 50px;
 
     &Content {
@@ -57,7 +57,7 @@
             font-weight: 200;
             &:focus-visible {
                 outline: 0;
-                border: 1px solid #000;
+                border: 1px solid $black;
                 box-shadow: inset 0 0 0 2px $black, 0 0 0 6px $orange;
             }
         }
@@ -74,17 +74,19 @@
             justify-content: center;
             background-color: $white;
             padding: 10px 20px;
-             
+            color: $black;
             max-width: fit-content;
             font-size: 16px;
             cursor: pointer;
+            border-radius: 20px;
              
             &:hover {
-                 
+                background-color: $blue; 
                 color: #fff;
                 text-decoration: underline;
                 text-decoration-thickness: 1px;
                 text-underline-offset: 3px;
+                border-color: $white;
                  
             }
             &:focus-visible {
