--- a/src/components/faq/Faq.module.scss
+++ b/src/components/faq/Faq.module.scss
@@ -1,6 +1,13 @@
 @use '../../styles/variables.scss' as *;
 .faq {
     padding: 50px 0;
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 20px;
+    @media screen and (min-width: 768px) {
+         
+        max-width: 1280px;
+    }
     .faqItem {
         margin-bottom: 1rem;
         border: 1px solid #ebebeb;
@@ -16,6 +23,10 @@
         font-size: 1rem;
         position: relative;
         color: $black;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
         &:hover {
             color: #3084aa;
@@ -26,9 +37,12 @@
         }
 
         .icon {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
+            transition: transform 0.3s ease;
         }
     }
+
+    .open .icon { transform: rotate(180deg); }
 
     .answer {
         height: 0;
