--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -5,6 +5,10 @@
     width: 100%;
     background-color: $black;
     padding: 50px 0;
+    &Image {
+        width: 100%;
+        max-width: 150px;
+    }
      
     &Container {
         max-width: 1280px;
