--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -20,6 +20,10 @@
         max-width: 1280px;
     }
 
+    &Title {
+        font-size: 20px;
+    }
+
     &Admin {
         width: 20px;
         height: 20px;
@@ -35,7 +39,6 @@
         display: block;
         height: auto;
         box-sizing: border-box; 
-        background: $blue;
         border-radius: 50px;
         padding: 5px; 
     }
