--- a/src/components/subscribe/Subscribe.module.scss
+++ b/src/components/subscribe/Subscribe.module.scss
@@ -1,16 +1,19 @@
 
 @use '../../styles/variables' as *;
+@use '../../styles/mixins.scss' as *;
 
 .subscribe {
     position: relative;
-    padding-bottom: 50px;
-
+    width: 100%;
+    background-color: #0285ac;
+     
     &Content {
         position: relative;
         max-width: 1280px;
         margin: 0 auto;
         box-sizing: border-box;
         padding: 50px 0;
+        color: white;
         @media screen and (min-width: 1280px) {
             padding: 50px 0;
         }
@@ -18,12 +21,11 @@
 
     &Wrap {
         width: 100%;
-        max-width: 1280px;
-        margin: 0 auto;
-        padding: 0 20px;
+        max-width: 100%;
         box-sizing: border-box;
-        @media screen and (min-width: 1280px) {
-            padding: 0 80px;
+        padding: 0 20px;
+        @media screen and (min-width: 768px) {
+            max-width: 800px;
         }
     }
 
@@ -44,16 +46,20 @@
 
     .form {
         padding-top: 20px;
-        max-width: 60%;
+        max-width: 100%;
+         
         &Row {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: .5rem;
             margin-bottom: 20px;
         }
 
         &Input {
-            padding: 12px;
+            width: 100%;
+            font-size: 1rem;
+            line-height: 1.5;
+            padding: .693rem .75em;
             font-weight: 200;
             &:focus-visible {
                 outline: 0;
@@ -70,29 +76,7 @@
         }
         
         &Submit {
-            display: inline-flex;
-            justify-content: center;
-            background-color: $white;
-            padding: 10px 20px;
-            color: $black;
-            max-width: fit-content;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 20px;
-             
-            &:hover {
-                background-color: $blue; 
-                color: #fff;
-                text-decoration: underline;
-                text-decoration-thickness: 1px;
-                text-underline-offset: 3px;
-                border-color: $white;
-                 
-            }
-            &:focus-visible {
-                outline: 0;
-                text-decoration: underline;
-            }
+            @include black-button;
         }
     }
     .error {
