--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,7 +52,7 @@ a {
 
 .inner-section {
     position: relative;
-    max-width: 1280px;
+    max-width: 1380px;
     margin: 0 auto;
     box-sizing: border-box;
     padding: 50px 20px;
@@ -86,4 +86,21 @@ a {
         height: 20px;
     }
 }
- 
+
+.error-message {
+    background-color: rgb(233, 103, 103);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.success-message {
+    background-color: rgb(41, 161, 41);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 20px;
+}
