--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -32,3 +32,40 @@
         color: $blue;
     }
 }
+
+@mixin third-button {
+    padding: 10px 20px;
+    position: relative;
+    background-color: $white;
+    padding: 10px 20px;
+    border-radius: 50px;
+    color: $white;
+    border: 1px solid $white;
+    margin-top: 20px;
+    display: inline-block;
+    color: $blue;
+    &:hover {
+        background-color: $blue;
+        color: $white;
+    }
+}
+
+@mixin black-button {
+    display: block;
+    padding: 10px 20px;
+    position: relative;
+    background-color: black;
+    border-radius: 50px;
+    color: $white;
+    border: 1px solid black;
+    margin-top: 20px;
+    max-width: fit-content;
+    cursor: pointer;
+    font-size: 16px;
+
+    &:hover {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+    }
+}
